--- a/Education.html
+++ b/Education.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<title>Education</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
 			<td><center>BCA</center><br>Masters in Computer Application</td>
 		</tr>
 	</table><br><br><br><br>
-	<a href="index.html"><button type="button"><b>Back</b></button></a>
+	<a href="index.html"><button type="button"><b><< Back</b></button></a>
 	</center>
 </body>
 </html>
