--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <html>
 <title>My First Web Page</title>
-<head>Demo</head>
+<head></head>
 <link rel="stylesheet" href="stylesheet.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <body>
-<center><br><br><br><br>
-<img src="https://wallpapercave.com/wp/wp3400359.jpg"><br><br><br><br>
-<a href="Education.html"><button type="button"><b>Education</b></button></a>
-<a href="Hobbies.html"><button type="button"><b>Hobbies</b></button></a>
-<a href="Profession.html"><button type="button"><b>Profession</b></button></a>
+<center><br><br><br><br><br><br>
+<img src="Subhro.jpg"><br><br><br>
+<a href="Education.html"><button type="button"><span><b>Education</b></span></button></a>
+<a href="Hobbies.html"><button type="button"><span><b>Hobbies</b></span></button></a>
+<a href="Profession.html"><button type="button"><span><b>Profession</b></span></button></a>
+</center>
+<center><br><br>
+<footer>
+  <p><b>Author: Subroto Maji</b></p>
+  <p><a href=" ">subhro@123.com</a></p>
+</footer>
 </center>
 </body>
 </html>
